# sweepSurface

./: CMakeLists.txt  readme.md
include/: Algorithm.h  GLProgram.h  myutil.h
include/tinynurbs/: tinynurbs.h
include/tinynurbs/core/: evaluate.h  modify.h
include/tinynurbs/util/: integral.h
shaders/: lightvertexShader.vs
src/: CurveRender.cpp  DerivateRender.cpp  GLProgram.cpp  MeshRender.cpp  NormalRender.cpp  SurfaceRender.cpp  imgui.ini  main.cpp
